Level 5
Teleport level complete
more cleanup
npc dialogue now stops the player