@@ -10,7 +10,7 @@ public class Vector2 {
     public static final Vector2 right = new Vector2(1,0);
     public static final Vector2 zero = new Vector2(0,0);
     public static final Vector2 one = new Vector2(1,1);
-    private double x, y;
+    private float x, y;
     public Vector2(double x, double y){
         this.x = (float) x;
         this.y = (float)y;
@@ -33,30 +33,32 @@ public class Vector2 {
         }
     }
     public Vector2(ArrayList vals){
-        this.x = (double) (vals.getFirst());
-        this.y = (double) (vals.getLast());
+        this.x = Float.parseFloat(vals.get(0).toString());
+        this.y = Float.parseFloat(vals.get(1).toString());
     }
 
     public Vector2(){
         this(0,0);
     }
-    public double getX(){return x;}
-    public double getY(){return y;}
-    public double getMag(){return Math.sqrt(Math.pow(this.x,2) + Math.pow(this.y,2));}
+    public float getX(){return x;}
+    public float getY(){return y;}
+    public float getMag(){return (float) (Math.sqrt(Math.pow(this.x,2) + Math.pow(this.y,2)));}
     public Vector2 getNormalized(){return new Vector2(this.x/getMag(),this.y/getMag());}
     public void setX(float x){this.x = x;}
     public void setY(float y){this.y = y;}
-    public void setX(double x){this.x = x;}
-    public void setY(double y){this.y = y;}
+    public void setX(double x){this.x = (float) x;}
+    public void setY(double y){this.y = (float) y;}
     public Vector2 add(Vector2 v){
         return new Vector2(this.x + v.getX(), this.y + v.getY());
     }
     public Vector2 sub(Vector2 v){
         return new Vector2(this.x - v.getX(), this.y - v.getY());
     }
-    public Vector2 mul(double d){return  new Vector2((this.x * d), this.y*d);}
     public Vector2 mul(float f){
         return new Vector2(this.x * f, this.y * f);
+    }
+    public Vector2 mul(double d){
+        return new Vector2(this.x * d, this.y * d);
     }
     public Vector2 mul(Vector2 v){
         return new Vector2(this.x * v.getX(), this.y * v.getY());
@@ -75,7 +77,7 @@ public class Vector2 {
         return new Vector2(Math.max(this.x, v.getX()), Math.max(this.y, v.getY()));
     }
 
-    public static double dist(Vector2 a, Vector2 b){
+    public static float dist(Vector2 a, Vector2 b){
         return a.sub(b).getMag();
     }
     public static Vector2 lerp(Vector2 a, Vector2 b, float t) {
@@ -83,8 +85,8 @@ public class Vector2 {
         if (t == 0) return a;
         if (t == 1) return b;
 
-        double lerpedX = (1 - t) * a.getX() + t * b.getX();
-        double lerpedY = (1 - t) * a.getY() + t * b.getY();
+        float lerpedX = (1 - t) * a.getX() + t * b.getX();
+        float lerpedY = (1 - t) * a.getY() + t * b.getY();
 
         return new Vector2(lerpedX, lerpedY);
     }
@@ -97,8 +99,8 @@ public class Vector2 {
         return (this.x == val.getX() && this.y == val.getY());
     }
     public float distanceTo(Vector2 other) {
-        double dx = other.getX() - this.getX();
-        double dy = other.getY() - this.getY();
+        float dx = other.getX() - this.getX();
+        float dy = other.getY() - this.getY();
         return (float) Math.sqrt(dx * dx + dy * dy);
     }
     public  float toAngle() {
@@ -112,18 +114,18 @@ public class Vector2 {
     }
     public Vector2 truncate() { return new Vector2(Math.floor(this.x),Math.floor(this.y));}
     public Vector2 clamp(Vector2 max) {
-        double clampedX = Math.max(-max.getX(), Math.min(this.getX(), max.getX()));
-        double clampedY = Math.max(-max.getY(), Math.min(this.getY(), max.getY()));
+        float clampedX = Math.max(-max.getX(), Math.min(this.getX(), max.getX()));
+        float clampedY = Math.max(-max.getY(), Math.min(this.getY(), max.getY()));
         return new Vector2(clampedX, clampedY);
     }
-    public double dot(Vector2 other) {
+    public float dot(Vector2 other) {
         return this.getX() * other.getX() + this.getY() * other.getY();
     }
 
     public Vector2 projectOnto(Vector2 other) {
-        double dotProduct = this.dot(other);
-        double otherMagnitudeSquared = other.getX() * other.getX() + other.getY() * other.getY();
-        double scalar = dotProduct / otherMagnitudeSquared;
+        float dotProduct = this.dot(other);
+        float otherMagnitudeSquared = other.getX() * other.getX() + other.getY() * other.getY();
+        float scalar = dotProduct / otherMagnitudeSquared;
         return other.mul(scalar);
     }
     public Vector2 perpendicular() {
